--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -2,7 +2,7 @@
 name = "my-claw-agent"
 version = "0.2.0"
 description = "my-claw — Agent Python smolagents multi-agent"
-requires-python = ">=3.14.3"
+requires-python = ">=3.14"
 
 dependencies = [
     "smolagents[litellm,mcp]>=1.24.0",
@@ -19,6 +19,7 @@ dependencies = [
     "mcp>=1.26.0",
     "mcpadapt>=0.1.20",
     "ddgs>=9.0.0",
+    "markdownify>=0.14.1",
 ]
 
 [project.optional-dependencies]
